--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -1,15 +1,30 @@
-/*!
+/*
  * Start Bootstrap - Stylish Portfolio v5.0.1 (https://startbootstrap.com/template-overviews/stylish-portfolio)
  * Copyright 2013-2018 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-stylish-portfolio/blob/master/LICENSE)
  */
 
+ .imagemContain {
+  background-image: url(imagens\bg-masthead.jpg);
+  background-color: #fff;
+  color: #000;
+  background-size: contain;
+}
+.imagem {
+  background-image: url(imagens\bg-masthead.jpg);
+  background-color: #fff;
+  color: #000;
+  background-size: 100%;
+}
  body,
  html {
    width: 100%;
    height: 100%;
  }
- 
+ background-image: url(imagens\bg-masthead.jpg);
+ body {
+  background-image: url("imagens\bg-masthead.jpg");
+}
  body {
    font-family: 'Source Sans Pro';
  }
@@ -218,8 +233,8 @@
  
  .callout {
    padding: 15rem 0;
-   background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.1)), to(rgba(255, 255, 255, 0.1))), url("../img/bg-callout.jpg");
-   background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../img/bg-callout.jpg");
+   background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.1)), to(rgba(255, 255, 255, 0.1))), url("../imagens\copiasacademicas.jpeg");
+   background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../imagens\copiasacademicas.jpeg");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
@@ -373,7 +388,7 @@
  }
  
  .text-secondary {
-   color: #ecb807 !important;
+   color: #032e9a !important;
  }
  
  .main_title{
