--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,10 +1,12 @@
 body,
 html {
+  background-image: url(imagens\bg-masthead.jpg);
   width: 100%;
   height: 100%;
 }
 
 body {
+  background-image: url(imagens\bg-masthead.jpg);
   @include body-font;
 }
 
