--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   padding: 10px 40px;
   font-size: 18px;
   font-weight: 600;
-  background-color: #00FF08;
+  background-color: #a31cc9;
   border: 0;
   border-radius: 30px;
   cursor: pointer;
@@ -38,12 +38,12 @@ h2.titulo {
 }
 
 h2.titulo span {
-  color: #00FF08;
+  color: #a31cc9;
 }
 
 button:hover,
 form .btn-enviar input:hover {
-  box-shadow: 0px 0px 8px #00ff08;
+  box-shadow: 0px 0px 8px #a31cc9;
   transform: scale(1.05);
 }
 
@@ -86,7 +86,7 @@ header nav.menu-desktop ul li {
 }
 
 .btn-abrir-menu i{
-  color: #00FF08;
+  color: #a31cc9;
   font-size: 40px;
 }
 
@@ -116,7 +116,7 @@ header nav.menu-desktop ul li {
 }
 
 .menu-mobile .btn-fechar i{
-  color: #00FF08;
+  color: #a31cc9;
   font-size: 30px;
 }
 
@@ -133,7 +133,7 @@ header nav.menu-desktop ul li {
 }   
 
 .menu-mobile nav ul li a:hover{
-  background-color: #00FF08;
+  background-color: #a31cc9;
   color: #000;
 }
 
@@ -166,7 +166,7 @@ section.topo-do-site .flex {
 }
 
 .topo-do-site .txt-topo-site h1 span {
-  color: #00FF08;
+  color: #a31cc9;
 }
 
 .topo-do-site .txt-topo-site p {
@@ -214,7 +214,7 @@ section.especiliadades .flex {
 
 .especiliadades .especialidades-box i {
   font-size: 70px;
-  color: #00FF08;
+  color: #a31cc9;
 }
 
 .especiliadades .especialidades-box h3 {
@@ -243,7 +243,7 @@ section.sobre .flex {
 }
 
 .sobre .txt-sobre h2 span {
-  color: #00FF08;
+  color: #a31cc9;
   display: block;
 }
 
@@ -257,7 +257,7 @@ section.sobre .flex {
   height: 60px;
   border-radius: 50%;
   border: none;
-  background-color: #00FF08;
+  background-color: #a31cc9;
   font-size: 22px;
   cursor: pointer;
   margin: 0 5px;
@@ -351,7 +351,7 @@ form .btn-enviar {
 
 form .btn-enviar input {
   width: 120px;
-  background-color: #00FF08;
+  background-color: #a31cc9;
   color: #000;
   font-weight: 700;
   cursor: pointer;
@@ -374,11 +374,11 @@ footer .line-footer {
 }
 
 .borda {
-  border-top: 2px solid #00FF08;
+  border-top: 2px solid #a31cc9;
 }
 
 footer .line-footer p i {
-  color: #00FF08;
+  color: #a31cc9;
   font-size: 22px;
 }
 
