--- a/style.css
+++ b/style.css
@@ -182,8 +182,8 @@ section.topo-do-site .flex {
 }
 
 .topo-do-site .txt-topo-site p {
-  color: #73ced5;
-  margin: 40px 0;
+  color:#0abab5 ;
+  margin: 50px 0;
 }
 
 .topo-do-site .img-topo-site img {
