--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ section.topo-do-site .flex {
 }
 
 .topo-do-site .txt-topo-site p {
-  color:#0abab5 ;
+  color: #000000;
   margin: 50px 0;
 }
 
