--- a/style.css
+++ b/style.css
@@ -182,8 +182,8 @@ section.topo-do-site .flex {
 }
 
 .topo-do-site .txt-topo-site p {
-  color: #000000;
-  margin: 50px 0;
+  color: #8a2be2;
+  margin: 60px 0;
 }
 
 .topo-do-site .img-topo-site img {
