--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ section.topo-do-site .flex {
 }
 
 .topo-do-site .txt-topo-site p {
-  color: #8a2be2;
+  color: #8A2BE2 ;
   margin: 60px 0;
 }
 
