--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ section.topo-do-site .flex {
 }
 
 .topo-do-site .txt-topo-site p {
+  font-family: IBM Plex Sans
   color: #8A2BE2 ;
   margin: 60px 0;
 }
