--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ section.topo-do-site .flex {
 
 .topo-do-site .txt-topo-site p {
   font-family: IBM Plex Sans;
+  font-weight: bold;
   color: #8A2BE2 ;
   margin: 60px 0;
 }
