--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ section.topo-do-site .flex {
   font-family: IBM Plex Sans;
   font-weight: bold;
   box-shadow: 5px 5px 5px grey;
-  color: #8A2BE2 ;
+  color: #40E0D0 ;
   margin: 60px 0;
 }
 
