--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ section.topo-do-site .flex {
   font-family: IBM Plex Sans;
   font-weight: bold;
   text-shadow: 2px 2px 5px grey;
-  color: #40E0D0 ;
+  color: #4169E1;
   margin: 60px 0;
 }
 
