--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ section.topo-do-site .flex {
 .topo-do-site .txt-topo-site p {
   font-family: IBM Plex Sans;
   font-weight: bold;
-  text-shadow: 2px 2px 5px grey;
+  text-shadow: 2px 2px 5px #800080 ;
   color: #4169E1;
   margin: 60px 0;
 }
